@@ -104,7 +104,7 @@ Flag network-uri
 Executable git-annex
   Main-Is: git-annex.hs
   Build-Depends: MissingH, hslogger, directory, filepath,
-   containers, utf8-string, mtl (>= 2),
+   containers (>= 0.5.0.0), utf8-string, mtl (>= 2),
    bytestring, old-locale, time, dataenc, SHA, process, json,
    base (>= 4.5 && < 4.9), monad-control, exceptions (>= 0.6), transformers,
    IfElse, text, QuickCheck >= 2.1, bloomfilter, edit-distance,
