@@ -4,6 +4,8 @@ git-annex (5.20150410) UNRELEASED; urgency=medium
     activity from other uuids.
   * Union merge could fall over if there was a file in the repository
     with the same name as a git ref. Now fixed.
+  * info dir: Added information about repositories that
+    contain files in the specified directory.
 
  -- Joey Hess <id@joeyh.name>  Thu, 09 Apr 2015 20:59:43 -0400
 
